unpackaged/main/default/objects/Partner_Product__c/Partner_Product__c.object-meta.xml
<CustomObject>
    <description>Products that faculty can use</description>
    <label>Partner Product</label>
    <nameField>
        <displayFormat>Partner Product {00000}</displayFormat>
        <label>Partner Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>