unpackaged/main/default/objects/Partner_Product__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <formula>Opportunity__r.Book_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Name</label>
    <type>Text</type>
</CustomField>