unpackaged/main/default/objects/Partner_Product__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Contact__r.Account.BillingCity + ", "+ 
Contact__r.Account.BillingState +" " + BR() + 
Contact__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>