unpackaged/main/default/objects/Partner_Product__c/fields/Class_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Start_Date__c</fullName>
    <formula>Opportunity__r.Class_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Start Date</label>
    <type>Date</type>
</CustomField>