unpackaged/main/default/objects/Partner_Product__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <formula>Partner__r.Tutor_Competitor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor</label>
    <type>Checkbox</type>
</CustomField>