unpackaged/main/default/objects/Partner_Product__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Products</relationshipLabel>
    <relationshipName>Partner_Products</relationshipName>
    <type>Lookup</type>
</CustomField>