unpackaged/main/default/objects/Partner_Product__c/fields/ContactsEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactsEmail__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactsEmail</label>
    <type>Text</type>
</CustomField>