unpackaged/main/default/objects/Partner_Product__c/fields/ContactsPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactsPhone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactsPhone</label>
    <type>Text</type>
</CustomField>