unpackaged/main/default/objects/Partner_Product__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which Opportunity is using this product</description>
    <label>Opportunity</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Partner Products</relationshipLabel>
    <relationshipName>Partner_Products</relationshipName>
    <type>Lookup</type>
</CustomField>