unpackaged/main/default/objects/Partner_Product__c/fields/Partner2__c.field-meta.xml
<CustomField>
    <fullName>Partner2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner2</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Partner Products</relationshipLabel>
    <relationshipName>Partner_Products</relationshipName>
    <type>Lookup</type>
</CustomField>