unpackaged/main/default/objects/Partner_Product__c/fields/Permission_To_Share__c.field-meta.xml
<CustomField>
    <fullName>Permission_To_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permission To Share</label>
    <type>Checkbox</type>
</CustomField>