unpackaged/main/default/objects/Partner_Product__c/fields/Possible_Students_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Possible_Students_This_Year__c</fullName>
    <formula>Contact__r.Possible_Students_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Possible Students This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>