unpackaged/main/default/objects/Partner_Product__c/fields/Recent_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Date__c</fullName>
    <label>Recent Date</label>
    <type>Date</type>
</CustomField>