unpackaged/main/default/objects/Partner_Product__c/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <formula>Contact__r.School_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Type</label>
    <type>Text</type>
</CustomField>