unpackaged/main/default/objects/Partner_Product__c/fields/School_Website__c.field-meta.xml
<CustomField>
    <fullName>School_Website__c</fullName>
    <formula>Contact__r.Account.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Website</label>
    <type>Text</type>
</CustomField>