unpackaged/main/default/objects/Partner_Product__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <formula>TEXT(Partner__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service</label>
    <type>Text</type>
</CustomField>