unpackaged/main/default/objects/Partner_Product__c/fields/Service_for_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Service_for_Roll_up__c</fullName>
    <label>Service for Roll-up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>