unpackaged/main/default/objects/Partner_Product__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expressed Interest</fullName>
            </value>
            <value>
                <fullName>Using Partner</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Past</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>