unpackaged/main/default/objects/Partner_Product__c/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <formula>Opportunity__r.Students__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>