unpackaged/main/default/objects/Partner_Product__c/fields/Subject_Interest__c.field-meta.xml
<CustomField>
    <fullName>Subject_Interest__c</fullName>
    <label>Subject Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>