unpackaged/main/default/objects/Partner_Product__c/fields/Times_Filled_Out__c.field-meta.xml
<CustomField>
    <fullName>Times_Filled_Out__c</fullName>
    <label>Times Filled Out</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>