unpackaged/main/default/objects/Partner_Product__c/fields/Trigger_Flow__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Flow</label>
    <type>Checkbox</type>
</CustomField>