unpackaged/main/default/objects/Partner_Product__c/fields/tutor_competitor__c.field-meta.xml
<CustomField>
    <fullName>tutor_competitor__c</fullName>
    <formula>Partner__r.Tutor_Competitor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tutor competitor</label>
    <type>Checkbox</type>
</CustomField>