unpackaged/main/default/objects/Partner_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>NAME</columns>
    <columns>ContactsEmail__c</columns>
    <columns>Partner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>