unpackaged/main/default/objects/Partner_Product__c/listViews/New_Leads_Last_Month.listView-meta.xml
<ListView>
    <fullName>New_Leads_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>ContactsEmail__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>New Leads Last Month</label>
</ListView>